test/fail/infer14.v3
//@seman = TypeParamInferError @ 6:18
def s<A, B>(t: A) -> int {
	return 11;
}
def m() {
	var x = s(0);
}
